// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Workflow /> renders properly 1`] = `
<div>
  <section
    class="jsx-2192258247 container"
    data-testid="workflow_section"
  >
    <div
      class="jsx-2192258247 wrapper genericMargins"
    >
      <h1
        class="jsx-3953086084 "
      >
        Workflow
      </h1>
      <ul
        class="jsx-2192258247"
      >
        <li
          class="jsx-2192258247"
        >
          <p
            class="jsx-2192258247"
          >
            1.
          </p>
          <p
            class="jsx-2192258247"
          >
            Definir target
          </p>
          <div
            class="jsx-2192258247 backface"
          >
            <p
              class="jsx-2192258247"
            >
              Quem é o público-alvo da marca
            </p>
          </div>
        </li>
        <li
          class="jsx-2192258247"
        >
          <p
            class="jsx-2192258247"
          >
            2.
          </p>
          <p
            class="jsx-2192258247"
          >
            Definir objetivos
          </p>
          <div
            class="jsx-2192258247 backface"
          >
            <p
              class="jsx-2192258247"
            >
              Quais são os objetivos de negócio e comunicação
            </p>
          </div>
        </li>
        <li
          class="jsx-2192258247"
        >
          <p
            class="jsx-2192258247"
          >
            3.
          </p>
          <p
            class="jsx-2192258247"
          >
            Estratégia de plataformas
          </p>
          <div
            class="jsx-2192258247 backface"
          >
            <p
              class="jsx-2192258247"
            >
              Quais as plataformas onde a marca deve estar presente
            </p>
          </div>
        </li>
        <li
          class="jsx-2192258247"
        >
          <p
            class="jsx-2192258247"
          >
            4.
          </p>
          <p
            class="jsx-2192258247"
          >
            Criação de Conteúdo
          </p>
          <div
            class="jsx-2192258247 backface"
          >
            <p
              class="jsx-2192258247"
            >
              Criação de conteúdo relevante e de qualidade para o target
            </p>
          </div>
        </li>
        <li
          class="jsx-2192258247"
        >
          <p
            class="jsx-2192258247"
          >
            5.
          </p>
          <p
            class="jsx-2192258247"
          >
            Paid social & influencers
          </p>
          <div
            class="jsx-2192258247 backface"
          >
            <p
              class="jsx-2192258247"
            >
              Promoção de posts e colaborações com influencers
            </p>
          </div>
        </li>
        <li
          class="jsx-2192258247"
        >
          <p
            class="jsx-2192258247"
          >
            6.
          </p>
          <p
            class="jsx-2192258247"
          >
            Insights e reports
          </p>
          <div
            class="jsx-2192258247 backface"
          >
            <p
              class="jsx-2192258247"
            >
              Análises detalhadas e identificação de insights
            </p>
          </div>
        </li>
        <li
          class="jsx-2192258247"
        >
          <p
            class="jsx-2192258247"
          >
            7.
          </p>
          <p
            class="jsx-2192258247"
          >
            Otimização
          </p>
          <div
            class="jsx-2192258247 backface"
          >
            <p
              class="jsx-2192258247"
            >
              Melhorias e updates à estratégia
            </p>
          </div>
        </li>
      </ul>
    </div>
  </section>
</div>
`;

exports[`<Workflow /> renders properly in English 1`] = `
<div>
  <section
    class="jsx-2192258247 container"
    data-testid="workflow_section"
  >
    <div
      class="jsx-2192258247 wrapper genericMargins"
    >
      <h1
        class="jsx-3953086084 "
      >
        Workflow
      </h1>
      <ul
        class="jsx-2192258247"
      >
        <li
          class="jsx-2192258247"
        >
          <p
            class="jsx-2192258247"
          >
            1.
          </p>
          <p
            class="jsx-2192258247"
          >
            Set the target
          </p>
          <div
            class="jsx-2192258247 backface"
          >
            <p
              class="jsx-2192258247"
            >
              What's the target
            </p>
          </div>
        </li>
        <li
          class="jsx-2192258247"
        >
          <p
            class="jsx-2192258247"
          >
            2.
          </p>
          <p
            class="jsx-2192258247"
          >
            Set goals
          </p>
          <div
            class="jsx-2192258247 backface"
          >
            <p
              class="jsx-2192258247"
            >
              What are the business and communication goals
            </p>
          </div>
        </li>
        <li
          class="jsx-2192258247"
        >
          <p
            class="jsx-2192258247"
          >
            3.
          </p>
          <p
            class="jsx-2192258247"
          >
            Platforms strategies
          </p>
          <div
            class="jsx-2192258247 backface"
          >
            <p
              class="jsx-2192258247"
            >
              In what platforms should the brand be present
            </p>
          </div>
        </li>
        <li
          class="jsx-2192258247"
        >
          <p
            class="jsx-2192258247"
          >
            4.
          </p>
          <p
            class="jsx-2192258247"
          >
            Content creation
          </p>
          <div
            class="jsx-2192258247 backface"
          >
            <p
              class="jsx-2192258247"
            >
              Relevant and quality content created for the target
            </p>
          </div>
        </li>
        <li
          class="jsx-2192258247"
        >
          <p
            class="jsx-2192258247"
          >
            5.
          </p>
          <p
            class="jsx-2192258247"
          >
            Paid social & influencers
          </p>
          <div
            class="jsx-2192258247 backface"
          >
            <p
              class="jsx-2192258247"
            >
              Promoted posts and collaborations with influencers
            </p>
          </div>
        </li>
        <li
          class="jsx-2192258247"
        >
          <p
            class="jsx-2192258247"
          >
            6.
          </p>
          <p
            class="jsx-2192258247"
          >
            Insights and reports
          </p>
          <div
            class="jsx-2192258247 backface"
          >
            <p
              class="jsx-2192258247"
            >
              Detailed analysis and insights' finding
            </p>
          </div>
        </li>
        <li
          class="jsx-2192258247"
        >
          <p
            class="jsx-2192258247"
          >
            7.
          </p>
          <p
            class="jsx-2192258247"
          >
            Optimization
          </p>
          <div
            class="jsx-2192258247 backface"
          >
            <p
              class="jsx-2192258247"
            >
              Strategy updates and improvements
            </p>
          </div>
        </li>
      </ul>
    </div>
  </section>
</div>
`;
